# ERPNext_Brazil

./: .gitignore  CLAUDE.md  LICENSE  continue.sh  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: banking.instructions.md  fiscal.instructions.md  intelligence.instructions.md
.github/workflows/: ci.yml
Brazil_Module/: hooks.py  modules.txt
Brazil_Module/tests/: test_cert_utils.py  test_cleanup_banking.py  test_cnpj.py  test_dfe_client.py  test_doctype_banking_validation.py  test_doctype_fiscal_validation.py  test_integration_banking.py  test_inter_client_banking.py  test_invoice_parser.py  test_item_manager.py  test_payment_service.py  test_supplier_manager.py
brazil/: README.md  pyproject.toml
brazil/brazil/: hooks.py  patches.txt
brazil_module/: hooks.py  modules.txt  patches.txt
brazil_module/api/: __init__.py
brazil_module/setup/: install.py
brazil_module/tests/: test_action_executor.py  test_agent.py  test_anomaly_detector.py  test_approval_formatter.py  test_auth_manager.py  test_boleto_service.py  test_cert_utils.py  test_channel_router.py  test_chave_acesso.py  test_circuit_breaker.py  test_cleanup_banking.py  test_cnpj.py  test_compliance.py  test_context_builder.py  test_cost_tracker.py  test_daily_briefing.py  test_decision_engine.py  test_dfe_client.py  test_doctype_banking_validation.py  test_doctype_fiscal_validation.py  test_email_monitor.py  test_email_tools.py  test_erp_chat.py  test_erp_tools.py  test_expense_scheduler.py  test_follow_up_manager.py  test_formatters.py  test_integration_banking.py  (+24 more)
(+231 files in other folders)
